add another import data button in the options panel, below the backup/export button

--- a/index.html
+++ b/index.html
@@ -1185,6 +1185,10 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 								<button id="options_backup" name="backup">Backup All Data</button>
 								&mdash; Export all stored builds, modules, and other preferences in a structured format suitable for backup or transfer to another device or browser.
 							</div>
+							<div>
+								<button id="options_restore" name="restore">Restore Data</button>
+								&mdash; Import stored builds, modules, and other preferences that were previously exported from another device or browser.
+							</div>
 						</section>
 						<section>
 							<header>Contact Me</header>
