--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 -->
 		<title>EDSY</title>
 		<meta name="application-name" content="EDSY">
-		<meta name="edsy-versions-html" id="edsy_versions_html" content="36241,36241,36241,36241"><!-- HTML,CSS,DB,JS -->
-		<meta name="last-modified" id="last_modified" content="20200404">
+		<meta name="edsy-versions-html" id="edsy_versions_html" content="37546,36241,36241,37546"><!-- HTML,CSS,DB,JS -->
+		<meta name="last-modified" id="last_modified" content="20210121">
 		<meta name="author" content="taleden">
 		<meta name="description" content="EDSY is a ship outfitting tool for Elite Dangerous">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -896,7 +896,8 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 														<option value="" selected>(Current Build)</option>
 													</select></td>
 													<td><select name="retrofit_builds_base_">
-														<option value="" selected>(Stock Ship)</option>
+														<option value="	stock" selected>(Stock Ship)</option>
+														<option value="" selected>(Current Build)</option>
 													</select></td>
 													<td class="tar"><button name="retrofit_builds_delete_"><svg class="iconsvg minus"><use xlink:href="#icon_minus"/></svg></button></td>
 												</tr>
