--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 		<link rel="icon" sizes="196x196" href="favicon-196.png">
 		<link rel="mask-icon" href="favicon.svg" color="#ff7f00">
 		<link rel="apple-touch-icon-precomposed" href="favicon-152.png">
+		<script type="application/javascript" src="nocache"></script>
 	</head>
 	<body class="">
 		<div id="svg_defs">
