--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 		<title>EDSY</title>
 		<meta name="application-name" content="EDSY">
 		<meta name="edsy-versions-html" id="edsy_versions_html" content="37547,36241,36241,37546"><!-- HTML,CSS,DB,JS -->
-		<meta name="last-modified" id="last_modified" content="20210122">
+		<meta name="last-modified" id="last_modified" content="20210125">
 		<meta name="author" content="taleden">
 		<meta name="description" content="EDSY is a ship outfitting tool for Elite Dangerous">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,6 +24,9 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 		<script defer src="pako.min.js"></script>
 		<script defer src="eddb.js"></script>
 		<script defer src="edsy.js"></script>
+		<link rel="preload" as="font" href="EuroCaps.woff2" type="font/woff2" crossorigin="anonymous">
+		<link rel="preload" as="font" href="Sintony.woff2" type="font/woff2" crossorigin="anonymous">
+		<link rel="preload" as="font" href="Telegrama.woff2" type="font/woff2" crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="edsy.css">
 		<link rel="icon" sizes="16x16 32x32" href="favicon.ico">
 		<link rel="icon" sizes="16x16" href="favicon-16.png">
