updated EDOMH export to fully exclude legacy/custom/pre-engineered modules, added pre-engineered Guardian Gauss, and expanded the version numbering range

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 -->
 		<title>EDSY</title>
 		<meta name="application-name" content="EDSY">
-		<meta name="edsy-versions-html" id="edsy_versions_html" content="37548,36241,36241,37546"><!-- HTML,CSS,DB,JS -->
+		<meta name="edsy-versions-html" id="edsy_versions_html" content="307059908,306029901,306029901,307059906"><!-- HTML,CSS,DB,JS -->
 		<meta name="last-modified" id="last_modified" content="20210616">
 		<meta name="author" content="taleden">
 		<meta name="description" content="EDSY is a ship outfitting tool for Elite Dangerous">
