genericized handling of popout controls (outfitting cols, ops)

--- a/index.html
+++ b/index.html
@@ -241,20 +241,20 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 									<button id="outfitting_fit_stored_delete"><svg class="iconsvg delete"><use xlink:href="#icon_delete"/></svg></button>
 								</div>
 								<span></span>
-								<div id="outfitting_cols_container">
-									<input type="checkbox" id="outfitting_cols_focus" class="toggleinput">
-									<label id="outfitting_cols_label" for="outfitting_cols_focus"><svg class="iconsvg eye"><use xlink:href="#icon_eye"/></svg><span> SHOW</span></label>
-									<div id="outfitting_cols_popout">
+								<div id="outfitting_cols_popout" class="popout">
+									<input type="checkbox" id="outfitting_cols_toggle" class="toggleinput">
+									<label for="outfitting_cols_toggle"><svg class="iconsvg eye"><use xlink:href="#icon_eye"/></svg><span> SHOW</span></label>
+									<div>
 										<label class="togglebutton"><input name="outfitting_show_mass" type="checkbox" value="1"><div>Mass</div></label>
 										<label class="togglebutton"><input name="outfitting_show_power" type="checkbox" value="1"><div>Power</div></label>
 										<label class="togglebutton"><input name="outfitting_show_attrs" type="checkbox" value="1"><div>Attrs</div></label>
 										<label class="togglebutton"><input name="outfitting_show_price" type="checkbox" value="1"><div>Price</div></label>
 									</div>
 								</div>
-								<div id="outfitting_ops_container">
-									<input type="checkbox" id="outfitting_ops_focus" class="toggleinput">
-									<label id="outfitting_ops_label" for="outfitting_ops_focus"><svg class="iconsvg menudots"><use xlink:href="#icon_menudots"/></svg><span>OPS</span></label>
-									<div id="outfitting_ops_popout">
+								<div id="outfitting_ops_popout" class="popout">
+									<input type="checkbox" id="outfitting_ops_toggle" class="toggleinput">
+									<label for="outfitting_ops_toggle"><svg class="iconsvg menudots"><use xlink:href="#icon_menudots"/></svg><span>OPS</span></label>
+									<div>
 										<button id="outfitting_fit_import"><svg class="iconsvg import"><use xlink:href="#icon_import"/></svg> Import...</button>
 										<button id="outfitting_fit_export"><svg class="iconsvg export"><use xlink:href="#icon_export"/></svg> Export...</button>
 										<button id="outfitting_fit_xref"><svg class="iconsvg xref"><use xlink:href="#icon_xref"/></svg> Search EDDB</button>
