removed separate eddb/clipboard buttons from retrofit checklist/materials headers in favor of new 'export retrofit report' button with popup including multiple export formats

--- a/index.html
+++ b/index.html
@@ -1016,8 +1016,6 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 								<div id="analysis_retrofit_steps" class="analysis_retrofit_panel">
 									<div class="analysis_retrofit_divider">
 										<header>Checklist</header>
-										<button name="retrofit_steps_xref"><svg class="iconsvg xref"><use xlink:href="#icon_xref"/></svg></button>
-										<button name="retrofit_steps_copy"><svg class="iconsvg clipboard"><use xlink:href="#icon_clipboard"/></svg></button>
 									</div>
 									<div class="scroller">
 										<table id="analysis_retrofit_steps_table" class="striped">
@@ -1048,7 +1046,6 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 								<div id="analysis_retrofit_costs" class="analysis_retrofit_panel">
 									<div class="analysis_retrofit_divider">
 										<header>Materials</header>
-										<button name="retrofit_costs_copy"><svg class="iconsvg clipboard"><use xlink:href="#icon_clipboard"/></svg></button>
 									</div>
 									<div class="scroller">
 										<table id="analysis_retrofit_costs_table" class="striped">
@@ -1076,6 +1073,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 									</div>
 								</div>
 							</div>
+							<button name="retrofit_export" id="retrofit_export" class="text"><svg class="iconsvg export"><use xlink:href="#icon_export"/></svg> Export Retrofit Report</button>
 						</div>
 					</div>
 				</form>
