added powerplay tag icon to those modules, similar to guardian modules

--- a/index.html
+++ b/index.html
@@ -132,6 +132,9 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 					<symbol id="icon_guardian" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
 						<path d="M 0,1 l 4,0 -2,3.5 z M 9,1 l 4,0 -2,3.5 z M 4.5,9 l 4,0 -2,3.5 z M 6.5,0.75 l 3.5,6.25 -7,0 z M 6.5,2.75 l -1.75,3.25 3.5,0 z"/>
 					</symbol>
+					<symbol id="icon_powerplay" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
+						<path d="M 6.5,0 l 6.5,6.5 -6.5,6.5 -6.5,-6.5 z M 2,2 h 9 v 9 h -9 z"/>
+					</symbol>
 					<symbol id="icon_engineer" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
 						<path d="M 6.5,0 l 6,3.25 0,6 -5.5,3 -6,-3.25 0,-6 z M 6.5,1.25 l -4.5,2.5 0,4.5 4.5,2.5 4.5,-2.5 0,-4.5 z M 6.5,3.5 a 2.5,2.5 0 0 1 0,5 a 2.5,2.5 0 0 1 0,-5 z M 5.75,7.25 a 1.5,1.5 0 0 0 2,-2 a 1.5,1.5 0 0 0 -2,2 z"/>
 					</symbol>
