created 'copy' icon for the clone discounts function

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 					<symbol id="icon_plus" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
 						<path d="M 1,5 h 4 v -4 h 3 v 4 h 4 v 3 h -4 v 4 h -3 v -4 h -4 z"/>
 					</symbol>
+					<symbol id="icon_copy" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
+						<path d="M 1,0 h 9 v 2 h 2 v 11 h -9 v -2 h -2 z M 2,1 v 9 h 1 v -8 h 6 v -1 z M 4,3 v 9 h 7 v -9 z"/>
+					</symbol>
 					<symbol id="icon_ignore" viewbox="0 0 13 13" stroke="none" fill="currentColor" shape-rendering="geometricPrecision">
 						<path d="M 6.5,0.75 a 5.75,5.75 0 1 1 0,11.5 a 5.75,5.75 0 1 1 0,-11.5 M 6.5,2.25 a 4.25,4.25 0 1 0 0,8.5 a 4.25,4.25 0 1 0 0,-8.5 z M 11.25,0.5 l 1.25,1.25 -10.75,10.75 -1.25,-1.25 z"/>
 					</symbol>
@@ -261,7 +264,7 @@ Frontier Customer Services (https://forums.frontier.co.uk/threads/elite-dangerou
 										<button id="outfitting_fit_import"><svg class="iconsvg import"><use xlink:href="#icon_import"/></svg> Import...</button>
 										<button id="outfitting_fit_export"><svg class="iconsvg export"><use xlink:href="#icon_export"/></svg> Export...</button>
 										<button id="outfitting_fit_xref"><svg class="iconsvg xref"><use xlink:href="#icon_xref"/></svg> Search EDDB</button>
-										<button id="outfitting_fit_discounts"><svg class="iconsvg reload"><use xlink:href="#icon_reload"/></svg> Clone Discounts</button>
+										<button id="outfitting_fit_discounts"><svg class="iconsvg copy"><use xlink:href="#icon_copy"/></svg> Clone Discounts</button>
 									</div>
 								</div>
 							</div>
